[package]
name = "audiokeyboard"
version = "1.2.0"
edition = "2021"
authors = ["Aiden J. Kring"]
rust-version = "1.61.0"
description = "use your computer keyboard like a piano"
readme = "./README.md"
repository = "https://github.com/Krayfighter/audiokeyboard"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.15.2"
crossterm = "0.27.0"

